@@ -2,6 +2,7 @@
  * Added --no-time-travel option (Lars Schmertmann).
  * Added --dir-name-position option (Lars Schmertmann).
  * Added --file-extension-fallback option (Lars Schmertmann).
+ * Added --user-show-filter option (Victor Lopez).
  * Fixed a bug in the log file format detection that could result in the wrong
    first entry being displayed for a custom log.
 
